--- a/frist.html
+++ b/frist.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Abdullah Al Imran</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cupiditate vel porro eius quos voluptates atque ipsam suscipit debitis, dolorum non tempore aliquid cum quibusdam, perspiciatis optio nihil veniam officia.</p>
     <address>34/1 choto boyra, khulna <br>GPO- 9000</address>
+    <img src="images/tushar.jpg" alt="my-profile-pic">
 </body>
 </html>
