--- a/frist.html
+++ b/frist.html
@@ -11,6 +11,6 @@
     <h1>Abdullah Al Imran</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cupiditate vel porro eius quos voluptates atque ipsam suscipit debitis, dolorum non tempore aliquid cum quibusdam, perspiciatis optio nihil veniam officia.</p>
     <address>34/1 choto boyra, khulna <br>GPO- 9000</address>
-    <img src="images/tushar.jpg" alt="my-profile-pic">
+    <p><img src="images/tushar.jpg" alt=""></p>
 </body>
 </html>
